<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_animation"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".ui.signUp.SignUpActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/story_app_logo"
            android:src="@drawable/storyapp_logo" />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textSize="36sp" />

        <com.ikbalghozali.storyapp.mycustomview.MyNameEditText
            android:id="@+id/et_name"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:alpha="0"
            android:hint="@string/name" />

        <com.ikbalghozali.storyapp.mycustomview.MyEmailEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:alpha="0"
            android:inputType="textEmailAddress" />

        <com.ikbalghozali.storyapp.mycustomview.MyPasswordEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:alpha="0"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword" />

        <com.ikbalghozali.storyapp.mycustomview.MyRegisterButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/et_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/have_account"
            android:backgroundTint="#FF531D"
            android:alpha="0"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>