<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.PostStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/preview_photo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_image"
            android:contentDescription="@string/image_story" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/liner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/preview_photo"
            app:layout_constraintTop_toBottomOf="@+id/preview_photo">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_marginEnd="25dp"
                android:text="@string/camera"
                app:layout_constraintStart_toStartOf="@+id/preview_photo"
                app:layout_constraintTop_toBottomOf="@+id/preview_photo" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_marginStart="25dp"
                android:text="@string/gallery"
                app:layout_constraintEnd_toEndOf="@+id/preview_photo"
                app:layout_constraintTop_toBottomOf="@+id/preview_photo" />
        </LinearLayout>


        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/outline_black"
            android:hint="@string/description"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="4"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="@+id/preview_photo"
            app:layout_constraintStart_toStartOf="@+id/preview_photo"
            app:layout_constraintTop_toBottomOf="@id/liner_layout" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/upload"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            app:layout_constraintEnd_toEndOf="@+id/preview_photo"
            app:layout_constraintStart_toStartOf="@+id/preview_photo" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
